Mobile navigation part 2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
   <nav class="primary-navigation | container pt-300">
-    <a href="/" title="Logo"><img src="assets/images/logo.svg" alt=""></a>
+    <a href="/" title="Logo" class="logo"><img src="assets/images/logo.svg" alt=""></a>
     <input type="checkbox" id="menu-toggle" data-menu-toggle aria-checked="false"
       aria-controls="menulist" class="visually-hidden">
     <label for="menu-toggle" data-menu-toggle-icon><span class="visually-hidden">menu toggle</span></label>
