--- a/index.html
+++ b/index.html
@@ -11,26 +11,14 @@
   <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | News homepage</title>
-
-  <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
 
   <nav class="primary-navigation | container pt-300">
     <a href="/" title="Logo" class="logo"><img src="assets/images/logo.svg" alt=""></a>
-    <input type="checkbox" id="menu-toggle" data-menu-toggle aria-checked="false"
-      aria-controls="menulist" class="visually-hidden">
+    <input type="checkbox" id="menu-toggle" data-menu-toggle aria-checked="false" aria-controls="menulist"
+      class="visually-hidden">
     <label for="menu-toggle" data-menu-toggle-icon><span class="visually-hidden">menu toggle</span></label>
     <menu id="menulist" data-menu-list role="list" aria-hidden="true" class="menu-list">
       <li><a href="/">Home</a></li>
@@ -43,24 +31,21 @@
 
   <main>
     <div class="container">
-      <section class="two-columns">
-        <header>
-          <img src="assets/images/image-web-3-desktop.jpg" alt="" role="banner">
-          <h1>The Bright Future of Web 3.0?</h1>
-          <div>
+      <section class="priority-two-columns gap-600">
+        <header class="primary-header">
+          <img src="assets/images/image-web-3-mobile.jpg" alt="" role="banner">
+          <div class="content">
+            <h1>The Bright Future of Web 3.0?</h1>
             <p>
               We dive into the next evolution of the web that claims to put the power of the platforms back into the
-              hands
-              of
-              the
-              people.
+              hands of the people.
               But is it really fulfilling its promise?
             </p>
             <button type="button">Read more</button>
           </div>
         </header>
 
-        <aside>
+        <aside class="news">
           <h2>New</h2>
           <article>
             <h3>Hydrogen VS Electric Cars</h3>
@@ -77,28 +62,34 @@
         </aside>
       </section>
 
-      <section>
+      <section class="articles | even-columns pt-600 gap-300">
         <article>
           <img src="assets/images/image-retro-pcs.jpg" alt="">
-          <h2 data-count="01">Reviving Retro PCs</h2>
-          <p>What happens when old PCs are given modern upgrades?</p>
+          <div data-count="01" class="content">
+            <h2>Reviving Retro PCs</h2>
+            <p>What happens when old PCs are given modern upgrades?</p>
+          </div>
         </article>
         <article>
           <img src="assets/images/image-top-laptops.jpg" alt="">
-          <h2 data-count="02">Top 10 Laptops of 2022</h2>
-          <p>Our best picks for various needs and budgets.</p>
+          <div data-count="02" class="content">
+            <h2>Top 10 Laptops of 2022</h2>
+            <p>Our best picks for various needs and budgets.</p>
+          </div>
         </article>
         <article>
           <img src="assets/images/image-gaming-growth.jpg" alt="">
-          <h2 data-count="03">The Growth of Gaming</h2>
-          <p>How the pandemic has sparked fresh opportunities.</p>
+          <div data-count="03" class="content">
+            <h2>The Growth of Gaming</h2>
+            <p>How the pandemic has sparked fresh opportunities.</p>
+          </div>
         </article>
       </section>
     </div>
   </main>
 
   <footer>
-    <div class="attribution">
+    <div class="attribution | py-200">
       Challenge by
       <a rel="noopener" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
