--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
       <section class="priority-two-columns gap-600">
         <header class="primary-header">
           <img src="assets/images/image-web-3-mobile.jpg" alt="" role="banner">
-          <div class="content">
-            <h1>The Bright Future of Web 3.0?</h1>
-            <p>
-              We dive into the next evolution of the web that claims to put the power of the platforms back into the
-              hands of the people.
-              But is it really fulfilling its promise?
-            </p>
-            <button type="button">Read more</button>
+          <div class="even-columns">
+            <h1 class="title">The Bright Future of Web 3.0?</h1>
+            <div class="content">
+              <p>
+                We dive into the next evolution of the web that claims to put the power of the platforms back into the
+                hands of the people.
+                But is it really fulfilling its promise?
+              </p>
+              <button type="button">Read more</button>
+            </div>
           </div>
         </header>
 
