--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <aside class="news">
           <h2>New</h2>
           <article>
-            <h3>Hydrogen VS Electric Cars</h3>
+            <h3><a href="/">Hydrogen VS Electric Cars</a></h3>
             <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
           </article>
           <article>
-            <h3>The Downsides of AI Artistry</h3>
+            <h3><a href="/">The Downsides of AI Artistry</a></h3>
             <p>What are the possible adverse effects of on-demand AI image generation?</p>
           </article>
           <article>
-            <h3>Is VC Funding Drying Up?</h3>
+            <h3><a href="/">Is VC Funding Drying Up?</a></h3>
             <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
           </article>
         </aside>
@@ -68,21 +68,21 @@
         <article>
           <img src="assets/images/image-retro-pcs.jpg" alt="">
           <div data-count="01" class="content">
-            <h2>Reviving Retro PCs</h2>
+            <h2><a href="/">Reviving Retro PCs</a></h2>
             <p>What happens when old PCs are given modern upgrades?</p>
           </div>
         </article>
         <article>
           <img src="assets/images/image-top-laptops.jpg" alt="">
           <div data-count="02" class="content">
-            <h2>Top 10 Laptops of 2022</h2>
+            <h2><a href="/">Top 10 Laptops of 2022</a></h2>
             <p>Our best picks for various needs and budgets.</p>
           </div>
         </article>
         <article>
           <img src="assets/images/image-gaming-growth.jpg" alt="">
           <div data-count="03" class="content">
-            <h2>The Growth of Gaming</h2>
+            <h2><a href="/">The Growth of Gaming</a></h2>
             <p>How the pandemic has sparked fresh opportunities.</p>
           </div>
         </article>
